objects/n2de__Team_member_runtime__c.object
<CustomObject>
    <description>Runtime object for the Team member configuration object</description>
    <fields>
        <fullName>n2de__Active_count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Active count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Daily_assignment_count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Daily assignment count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_sequence__c</fullName>
        <label>Distribution sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Half_hour_assignment_count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Half hour assignment count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Hourly_assignment_count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hourly assignment count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Last_assignment_date__c</fullName>
        <label>Last assignment date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_count_reset_date__c</fullName>
        <label>Last count reset date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_load_balance_reset__c</fullName>
        <label>Last load balance reset</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Load_balanced_count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Load balanced count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Monthly_assignment_count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Monthly assignment count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Weekly_assignment_count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Weekly assignment count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Team member runtime</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team member runtimes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>